# Cyber_tailor2024

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Cyber.pro  Dockerfile  start_docker.bat
YOLO/include/: calibrator.h  config.h  datetype.h  postprocess.hpp  types.h  utils.h  yololayer.h
YOLO/src/: calibrator.cpp  model.cpp  yololayer.cu
dockerbase/: Dockerfile  Dockerfile_build
include/: ImageProcessor.h  mainwindow.h  preprocessor.h  resourcemanager.h  ui_mainwindow.h  yoloparser.h  yolov5_lib.h
plugins/: preprocess.cu  preprocess.h
src/: main.cpp  mainwindow.cpp  preprocessor.cpp  resourcemanager.cpp  yoloparser.cpp  yolov5_lib.cpp
ui/: mainwindow.ui
